# film-substrate-structure-calculator

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
calculator/: __init__.py  config.py  curvature.py  exceptions.py  report.py  stats.py  stress.py  types.py
calculator/config/: __init__.py  config.py
calculator/data/: __init__.py  data.py  utils.py
calculator/distance/: __init__.py  distance.py  optimize.py
calculator/length/: __init__.py  length.py  lenth.py  optimize.py
calculator/report/: __init__.py  report.py
demo/: demo (low-level).ipynb  demo-calculate-distance.ipynb  demo-calculate-length.ipynb  demo-calculate-report.ipynb  demo-calculation.ipynb  demo-config.ipynb  demo-length.ipynb  demo-report.ipynb  demo.ipynb
scripts/: emulate.py  launch.py
src/calculator/: __init__.py  curvature.py  report.py  stats.py  types.py
src/calculator/config/: __init__.py  config.py  data_config.py  plugin_config.py
src/calculator/data/: __init__.py  data.py
src/calculator/length/: __init__.py  length.py  optimize.py
src/calculator/report/: report.py
tests/: conftest.py  test_calculate_distance.py  utils.py
tests/distance/: test_kernel.py
tests/length/: conftest.py  test_kernel.py  test_length.py
