[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "calculator"
dynamic = ["version"]
description = "A Python library to calculate film/substrate structure parameters."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pavel Vaschenko", email = "vaschenko@vmk.ru" },
]
keywords = [
    "curvature",
    "film/substrate structure",
    "stress",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jupyter==1.1.1",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "python-dotenv==1.0.1",
    "scipy==1.15.3",
    "tqdm==4.68.4",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8>=7.1.1",
    "flake8-commas>=4.0.0",
    "flake8-import-order>=0.18.2",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=2.5.0",
    "pep8-naming>=0.14.1",
]
testing = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
    "src/calculator",
]
